force-app/main/default/objects/Car_Rental_Office__c/Car_Rental_Office__c.object-meta.xml
<CustomObject>
    <label>Car Rental Office</label>
    <nameField>
        <label>Car Rental Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Rental Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>