force-app/main/default/objects/Car_Rental_Office__c/fields/Number_Of_Related_Cars__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Related_Cars__c</fullName>
    <label>Number Of Related Cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>