force-app/main/default/objects/Car_Rental_Office__c/fields/Total_Garages__c.field-meta.xml
<CustomField>
    <fullName>Total_Garages__c</fullName>
    <label>Total Garages</label>
    <summaryForeignKey>Car_Rental_Garage__c.Car_Rental_Office__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>