force-app/main/default/objects/Car_Rental_Office__c/fields/Total_Manager_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Manager_Count__c</fullName>
    <label>Total Manager Count</label>
    <summaryFilterItems>
        <field>Office_Employee__c.Position__c</field>
        <operation>equals</operation>
        <value>Manager</value>
    </summaryFilterItems>
    <summaryForeignKey>Office_Employee__c.Car_Rental_Office__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>